<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:id="@+id/main"
    android:background="@color/white"
    android:paddingHorizontal="20dp"
    android:paddingTop="40dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="#0C3B50"
        android:text="@string/enter_details" />
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="20dp"
    android:text="@string/name"
    style="@style/Theme.LinearLayout"/>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginHorizontal="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxStrokeWidth="2dp"
        app:boxStrokeColor="#0C3B50">
        <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Theme.LinearLayout"
            android:autofillHints=""
            android:minHeight="48dp"
            android:inputType="text"
            android:hint="@string/enter_name" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
        android:layout_margin="20dp"
    android:text="@string/city"
        style="@style/Theme.LinearLayout"/>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxStrokeWidth="2dp"
        android:layout_marginHorizontal="20dp"
        app:boxStrokeColor="#0C3B50">
        <EditText
            android:id="@+id/etCity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Theme.LinearLayout"
            android:autofillHints=""
            android:minHeight="48dp"
            android:inputType="text"
            android:hint="@string/enter_city" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/college"
        android:layout_margin="20dp"
    android:textSize="18sp"/>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        app:boxStrokeWidth="2dp"
        app:boxStrokeColor="#0C3B50">

        <EditText
            android:id="@+id/etCollege"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/enter_college"
            android:inputType="text"
            android:minHeight="48dp"
            android:textSize="18sp" />
    </com.google.android.material.textfield.TextInputLayout>

<com.google.android.material.button.MaterialButton
    android:layout_margin="20dp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:backgroundTint="#0C3B50"
    android:textColor="@color/white"
    android:textSize="18sp"
    android:paddingVertical="11dp"
    android:text="@string/submit"/>

</LinearLayout>